--- a/HW4/hw4.ipynb
+++ b/HW4/hw4.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "8f6daf17",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
       "<LasHeader(1.3, <PointFormat(1, 0 bytes of extra dims)>)>\n",
       "Data point format (PointFormat): <PointFormat(1, 0 bytes of extra dims)>\n",
       "Dimension names:\n",
-      "<generator object PointFormat.dimension_names.<locals>.<genexpr> at 0x7f9aac58c4a0>\n"
+      "['X', 'Y', 'Z', 'intensity', 'return_number', 'number_of_returns', 'scan_direction_flag', 'edge_of_flight_line', 'classification', 'synthetic', 'key_point', 'withheld', 'scan_angle_rank', 'user_data', 'point_source_id', 'gps_time']\n"
      ]
     }
    ],
@@ -55,7 +55,10 @@
     "print(f\"LAS file version: {lidar_data.header.version.major}.{lidar_data.header.version.minor}\")\n",
     "print(\"Header fields:\")\n",
     "print(lidar_data.header)\n",
-    "print(f\"Data point format (PointFormat): {lidar_data.header.point_format}\")\n"
+    "print(f\"Data point format (PointFormat): {lidar_data.header.point_format}\")\n",
+    "list(point_format.dimension_names)\n",
+    "print(\"Dimension names:\")\n",
+    "print(list(point_format.dimension_names))"
    ]
   },
   {
@@ -70,6 +73,9 @@
     "4. Header Fields printout: **<LasHeader(1.3, <PointFormat(1, 0 bytes of extra dims)>)>**\n",
     "5. Data point format: **Point Format 1**\n",
     "    - Really just data.header.point_format to get as it's part of the header printout above.\n",
+    "    - 5a. Dimension Names:\n",
+    "\n",
+    "    'X', 'Y', 'Z', 'intensity', 'return_number', 'number_of_returns', 'scan_direction_flag', 'edge_of_flight_line', 'classification', 'synthetic', 'key_point', 'withheld', 'scan_angle_rank', 'user_data', 'point_source_id', 'gps_time'\n",
     "\n",
     "6. Source: laspy- https://laspy.readthedocs.io/en/latest/index.html\n",
     "\n",
@@ -78,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "5add4074",
    "metadata": {},
    "outputs": [
@@ -120,6 +126,14 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "864e712c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
